--- a/pages/19869.html
+++ b/pages/19869.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9183/#Item_48" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9183/#Item_51" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -331,6 +331,7 @@ margin-left: 0em;
 <li><a href='#type_former_rules'>Type former rules</a></li>
 <li><a href='#types'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Π</mi></mrow><annotation encoding="application/x-tex">\Pi</annotation></semantics></math>-types</a></li>
 </ul>
+<li><a href='#valid_contexts_and_telescopes'>Valid Contexts and Telescopes</a></li>
 <li><a href='#bidirectional_vs_unidirectional'>Bidirectional vs Unidirectional</a></li>
 <li><a href='#admissible_rules'>Admissible rules</a></li>
 </ul>
@@ -473,6 +474,24 @@ margin-left: 0em;
 
 <p>&lt;/semantics&gt;&lt;/math&gt;&lt;/div&gt;</p>
 
+<h2 id="valid_contexts_and_telescopes">Valid Contexts and Telescopes</h2>
+
+<p>A (raw) <strong>telescope</strong> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Δ</mi></mrow><annotation encoding="application/x-tex">\Delta </annotation></semantics></math> is a (raw) context. A <strong>valid telescope</strong> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi><mo>⊢</mo><mi>Δ</mi><mi>ok</mi></mrow><annotation encoding="application/x-tex">\Gamma \vdash \Delta ok</annotation></semantics></math> is defined by another inductively-defined judgment form:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mfrac><mrow></mrow><mrow><mi>Γ</mi><mo>⊢</mo><mo>⋅</mo><mi>ok</mi></mrow></mfrac></mrow><annotation encoding="application/x-tex">\frac{}{\Gamma \vdash \cdot ok}</annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mfrac><mrow><mi>Γ</mi><mo>⊢</mo><mi>Δ</mi><mi>ok</mi><mspace width="2em"></mspace><mi>Γ</mi><mo>,</mo><mi>Δ</mi><mo>⊢</mo><mi>A</mi><mi>type</mi></mrow><mrow><mi>Γ</mi><mo>⊢</mo><mi>Δ</mi><mo>,</mo><mi>A</mi><mi>ok</mi></mrow></mfrac></mrow><annotation encoding="application/x-tex">\frac{\Gamma \vdash \Delta ok \qquad \Gamma,\Delta \vdash A type}
+    {\Gamma \vdash \Delta,A ok}
+</annotation></semantics></math></div>
+<p>Intuitively, a telescope is an open context. So a <strong>valid context</strong> can now be formalized as the closed special case of a valid telescope, with the single-rule judgment form:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mfrac><mrow><mo>⋅</mo><mo>⊢</mo><mi>Γ</mi><mi>ok</mi></mrow><mrow><mi>Γ</mi><mi>ok</mi></mrow></mfrac></mrow><annotation encoding="application/x-tex">\frac{\cdot \vdash \Gamma ok}{\Gamma ok}</annotation></semantics></math></div>
+<p>A valid telescope can also be understood as a valid multi-step context extension. So we have the theorem:</p>
+
+<p>(<math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi><mi>ok</mi></mrow><annotation encoding="application/x-tex">\Gamma ok</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi><mo>⊢</mo><mi>Δ</mi><mi>ok</mi></mrow><annotation encoding="application/x-tex">\Gamma \vdash \Delta ok</annotation></semantics></math>) if and only if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi><mo>,</mo><mi>Δ</mi><mi>ok</mi></mrow><annotation encoding="application/x-tex">\Gamma,\Delta ok</annotation></semantics></math>.</p>
+
+<p>You can also concatenate telescopes:</p>
+
+<p>(<math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi><mo>⊢</mo><mi>Δ</mi><mi>ok</mi></mrow><annotation encoding="application/x-tex">\Gamma \vdash \Delta ok</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi><mo>,</mo><mi>Δ</mi><mo>⊢</mo><mi>Δ</mi><mo>′</mo><mi>ok</mi></mrow><annotation encoding="application/x-tex">\Gamma,\Delta \vdash \Delta' ok</annotation></semantics></math>) if and only if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi><mo>⊢</mo><mi>Δ</mi><mo>,</mo><mi>Δ</mi><mo>′</mo><mi>ok</mi></mrow><annotation encoding="application/x-tex">\Gamma \vdash \Delta,\Delta' ok</annotation></semantics></math>.</p>
+
+<p>In fact, by the definition of context validity, the multi-step context extension is a special case of telescope concatenation.</p>
+
 <h2 id="bidirectional_vs_unidirectional">Bidirectional vs Unidirectional</h2>
 
 <p>As noted above, there is a canonical correspondence between our bidirectional theory (with any choice of type formers) and a unidirectional one obtained by collapsing both typing judgments <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>T</mi><mo>⇐</mo><mi>A</mi></mrow><annotation encoding="application/x-tex">T\Leftarrow A</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>T</mi><mo>⇒</mo><mi>A</mi></mrow><annotation encoding="application/x-tex">T\Rightarrow A</annotation></semantics></math> into one <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>T</mi><mo>:</mo><mi>A</mi></mrow><annotation encoding="application/x-tex">T:A</annotation></semantics></math> (and thereby the mode-switching rule into the conversion rule).</p>
@@ -489,8 +508,6 @@ margin-left: 0em;
 
 <h2 id="admissible_rules">Admissible rules</h2>
 
-<p>A <strong>telescope</strong> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Δ</mi></mrow><annotation encoding="application/x-tex">\Delta </annotation></semantics></math> is a (raw) context. A <strong>valid telescope</strong> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi><mo>⊢</mo><mi>Δ</mi></mrow><annotation encoding="application/x-tex">\Gamma \vdash \Delta</annotation></semantics></math> is a telescope <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Δ</mi><mo>=</mo><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>:</mo><msub><mi>A</mi> <mn>1</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>x</mi> <mi>n</mi></msub><mo>:</mo><msub><mi>A</mi> <mi>n</mi></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\Delta = (x_1:A_1, \ldots, x_n:A_n)</annotation></semantics></math> such that each judgment <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi><mo>,</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>:</mo><msub><mi>A</mi> <mn>1</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>x</mi> <mi>k</mi></msub><mo>:</mo><msub><mi>A</mi> <mi>k</mi></msub><mo>⊢</mo><msub><mi>x</mi> <mrow><mi>k</mi><mo>+</mo><mn>1</mn></mrow></msub><mo>:</mo><msub><mi>A</mi> <mrow><mi>k</mi><mo>+</mo><mn>1</mn></mrow></msub></mrow><annotation encoding="application/x-tex">\Gamma, x_1:A_1, \ldots, x_k:A_k \vdash x_{k+1} : A_{k+1}</annotation></semantics></math> are derivable. In particular, a valid telescope <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>⋅</mo><mo>⊢</mo><mi>Δ</mi></mrow><annotation encoding="application/x-tex">\cdot \vdash \Delta</annotation></semantics></math> is a valid context.</p>
-
 <p>Writing <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi><mo>⊢</mo><mi>𝒥</mi></mrow><annotation encoding="application/x-tex">\Gamma \vdash \mathcal{J}</annotation></semantics></math> for one of the <a href="#judgements">judgments</a>, the following rules are admissible by mutual induction on derivations :</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mfrac><mrow><mi>Γ</mi><mo>⊢</mo><mi>Γ</mi><mo>′</mo><mspace width="2em"></mspace><mi>Γ</mi><mo>,</mo><mi>Γ</mi><mo>′</mo><mo>⊢</mo><mi>𝒥</mi></mrow><mrow><mi>Γ</mi><mo>,</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo>,</mo><mi>Γ</mi><mo>′</mo><mo>⊢</mo><mi>𝒥</mi></mrow></mfrac></mrow><annotation encoding="application/x-tex"> \frac{\Gamma \vdash \Gamma' \qquad \Gamma, \Gamma' \vdash \mathcal{J}}{\Gamma, x:A, \Gamma' \vdash \mathcal{J}} </annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mfrac><mrow><mi>Γ</mi><mo>⊢</mo><mi>B</mi><mspace width="thinmathspace"></mspace><mi>type</mi><mspace width="2em"></mspace><mi>Γ</mi><mo>,</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo>,</mo><mi>y</mi><mo>:</mo><mi>B</mi><mo>,</mo><mi>Γ</mi><mo>′</mo><mo>⊢</mo><mi>𝒥</mi></mrow><mrow><mi>Γ</mi><mo>,</mo><mi>y</mi><mo>:</mo><mi>B</mi><mo>,</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo>,</mo><mi>Γ</mi><mo>′</mo><mo>⊢</mo><mi>𝒥</mi></mrow></mfrac></mrow><annotation encoding="application/x-tex"> \frac{\Gamma \vdash B\,type \qquad \Gamma, x:A, y:B, \Gamma' \vdash \mathcal{J}}{\Gamma, y:B, x:A, \Gamma' \vdash \mathcal{J}} </annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mfrac><mrow><mi>Γ</mi><mo>,</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo>,</mo><mi>y</mi><mo>:</mo><mi>A</mi><mo>,</mo><mi>Γ</mi><mo>′</mo><mo>⊢</mo><mi>𝒥</mi></mrow><mrow><mi>Γ</mi><mo>,</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo>,</mo><mi>Γ</mi><mo>′</mo><mo stretchy="false">[</mo><mi>x</mi><mo stretchy="false">/</mo><mi>y</mi><mo stretchy="false">]</mo><mo>⊢</mo><mi>𝒥</mi><mo stretchy="false">[</mo><mi>x</mi><mo stretchy="false">/</mo><mi>y</mi><mo stretchy="false">]</mo></mrow></mfrac></mrow><annotation encoding="application/x-tex"> \frac{\Gamma, x:A, y:A, \Gamma' \vdash \mathcal{J}}{\Gamma, x:A, \Gamma'[x/y] \vdash \mathcal{J}[x/y]} </annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mfrac><mrow><mi>Γ</mi><mo>⊢</mo><mi>T</mi><mo>⇒</mo><mi>A</mi><mspace width="2em"></mspace><mi>Γ</mi><mo>,</mo><mi>x</mi><mo>:</mo><mi>A</mi><mo>,</mo><mi>Γ</mi><mo>′</mo><mo>⊢</mo><mi>𝒥</mi></mrow><mrow><mi>Γ</mi><mo>,</mo><mi>Γ</mi><mo>′</mo><mo stretchy="false">[</mo><mi>T</mi><mo stretchy="false">/</mo><mi>x</mi><mo stretchy="false">]</mo><mo>⊢</mo><mi>𝒥</mi><mo stretchy="false">[</mo><mi>T</mi><mo stretchy="false">/</mo><mi>x</mi><mo stretchy="false">]</mo></mrow></mfrac></mrow><annotation encoding="application/x-tex"> \frac{\Gamma \vdash T \Rightarrow A \qquad \Gamma, x:A, \Gamma' \vdash \mathcal{J}}{\Gamma, \Gamma'[T/x] \vdash \mathcal{J}[T/x]} </annotation></semantics></math></div>
 <p>(TODO)</p>
@@ -500,14 +517,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  1, 2018 at 05:31:16.
+  Last revised on November  1, 2018 at 07:55:00.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - Type Theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+Type+Theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+Type+Theory/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+Type+Theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+Type+Theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project+-+Type+Theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+Type+Theory/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+Type+Theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+Type+Theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - Type Theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
