--- a/pages/19869.html
+++ b/pages/19869.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -477,8 +477,10 @@ margin-left: 0em;
 <h2 id="valid_contexts_and_telescopes">Valid Contexts and Telescopes</h2>
 
 <p>A (raw) <strong>telescope</strong> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Δ</mi></mrow><annotation encoding="application/x-tex">\Delta </annotation></semantics></math> is a (raw) context. A <strong>valid telescope</strong> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Γ</mi><mo>⊢</mo><mi>Δ</mi><mi>ok</mi></mrow><annotation encoding="application/x-tex">\Gamma \vdash \Delta ok</annotation></semantics></math> is defined by another inductively-defined judgment form:</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mfrac><mrow></mrow><mrow><mi>Γ</mi><mo>⊢</mo><mo>⋅</mo><mi>ok</mi></mrow></mfrac></mrow><annotation encoding="application/x-tex">\frac{}{\Gamma \vdash \cdot ok}</annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mfrac><mrow><mi>Γ</mi><mo>⊢</mo><mi>Δ</mi><mi>ok</mi><mspace width="2em"></mspace><mi>Γ</mi><mo>,</mo><mi>Δ</mi><mo>⊢</mo><mi>A</mi><mi>type</mi></mrow><mrow><mi>Γ</mi><mo>⊢</mo><mi>Δ</mi><mo>,</mo><mi>A</mi><mi>ok</mi></mrow></mfrac></mrow><annotation encoding="application/x-tex">\frac{\Gamma \vdash \Delta ok \qquad \Gamma,\Delta \vdash A type}
-    {\Gamma \vdash \Delta,A ok}
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mfrac><mrow></mrow><mrow><mi>Γ</mi><mo>⊢</mo><mo>⋅</mo><mi>ok</mi></mrow></mfrac></mrow><annotation encoding="application/x-tex">\frac{}{\Gamma \vdash \cdot ok}</annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></div><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mfrac><mrow><mi>Γ</mi><mo>⊢</mo><mi>Δ</mi><mi>ok</mi><mspace width="2em"></mspace><mi>Γ</mi><mo>,</mo><mi>Δ</mi><mo>⊢</mo><mi>A</mi><mi>type</mi><mspace width="2em"></mspace><mi>x</mi><mo>∉</mo><mi>Γ</mi><mo>,</mo><mi>Δ</mi></mrow><mrow><mi>Γ</mi><mo>⊢</mo><mi>Δ</mi><mo>,</mo><mi>x</mi><mo>:</mo><mi>A</mi><mi>ok</mi></mrow></mfrac></mrow><annotation encoding="application/x-tex">\frac{\Gamma \vdash \Delta ok \qquad
+        \Gamma,\Delta \vdash A type \qquad
+        x \notin \Gamma,\Delta}
+    {\Gamma \vdash \Delta,x:A ok}
 </annotation></semantics></math></div>
 <p>Intuitively, a telescope is an open context. So a <strong>valid context</strong> can now be formalized as the closed special case of a valid telescope, with the single-rule judgment form:</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mfrac><mrow><mo>⋅</mo><mo>⊢</mo><mi>Γ</mi><mi>ok</mi></mrow><mrow><mi>Γ</mi><mi>ok</mi></mrow></mfrac></mrow><annotation encoding="application/x-tex">\frac{\cdot \vdash \Gamma ok}{\Gamma ok}</annotation></semantics></math></div>
@@ -517,7 +519,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  1, 2018 at 07:55:00.
+  Last revised on November  1, 2018 at 08:02:07.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - Type Theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
