--- a/pages/6875.html
+++ b/pages/6875.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9222/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -311,7 +311,7 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Literature</title></head>
 <body>
-<p>Some <a class="existingWikiWord" href="/nlab/show/Hopf+algebra">Hopf algebra</a>s encode relevant combinatorial information and are quite common and useful in <span class="newWikiWord">algebraic combinatorics<a href="/nlab/new/algebraic+combinatorics">?</a></span> in general. More recently Hopf algebras appeared also in the study of <a class="existingWikiWord" href="/nlab/show/renormalization">renormalization</a> of QFT, controlling its combinatorics. Combinatorial Hopf algebra may denote either informal notion of Hopf algebra coming from combinatorics (and, in particular, study of various rings of symmetric functions), but also, now standard notion as a pair of a Hopf algebra <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math> over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math> equipped with a character <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ζ</mi><mo>:</mo><mi>H</mi><mo>→</mo><mi>k</mi></mrow><annotation encoding="application/x-tex">\zeta: H\to k</annotation></semantics></math>, the zeta function of a Hopf algebra.</p>
+<p>Some <a class="existingWikiWord" href="/nlab/show/Hopf+algebra">Hopf algebra</a>s encode relevant combinatorial information and are quite common and useful in <span class="newWikiWord">algebraic combinatorics<a href="/nlab/new/algebraic+combinatorics">?</a></span> in general. More recently Hopf algebras appeared also in the study of <a class="existingWikiWord" href="/nlab/show/renormalization">renormalization</a> of QFT, controlling its combinatorics. Combinatorial Hopf algebra may refer either to a Hopf algebra coming from combinatorics (and, in particular, to the study of various rings of symmetric functions), but also to the now standard notion of a pair, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>H</mi><mo>,</mo><mi>ζ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(H,\zeta)</annotation></semantics></math>, consisting of a Hopf algebra <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math> over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math> together with a character <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ζ</mi><mo>:</mo><mi>H</mi><mo>→</mo><mi>k</mi></mrow><annotation encoding="application/x-tex">\zeta: H\to k</annotation></semantics></math>, the zeta function of a Hopf algebra.</p>
 
 <h2 id="literature">Literature</h2>
 
@@ -370,14 +370,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  1, 2018 at 10:21:15.
+  Last revised on November  2, 2018 at 02:49:07.
   See the <a href="https://ncatlab.org/nlab/history/combinatorial Hopf algebra" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/combinatorial+Hopf+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/combinatorial+Hopf+algebra/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/combinatorial+Hopf+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/combinatorial+Hopf+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/combinatorial+Hopf+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/combinatorial+Hopf+algebra/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/combinatorial+Hopf+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/combinatorial+Hopf+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/combinatorial Hopf algebra/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
