--- a/pages/19903.html
+++ b/pages/19903.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9224/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9224/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -404,20 +404,32 @@ margin-left: 0em;
 </ul>
 </li>
 </ul>
+
+<p><span class="newWikiWord">Brandon Coya<a href="/nlab/new/Brandon+Coya">?</a></span>, <em>Circuits, Bond Graphs, and Signal-Flow Diagrams: A Categorical Perspective</em>, <a href="https://arxiv.org/abs/1805.08290">arXiv:1805.08290</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/John+Baez">John Baez</a> and <span class="newWikiWord">Brendan Fong<a href="/nlab/new/Brendan+Fong">?</a></span>, <em>A Compositional Framework for Passive Linear Networks</em>, <a href="https://arxiv.org/abs/1504.05625">arXiv:1504.05625</a></p>
+
+<p><span class="newWikiWord">Blake Pollard<a href="/nlab/new/Blake+Pollard">?</a></span>, <em>Open Markov processes: A compositional perspective on non-equilibrium steady states in biology</em>, <a href="https://arxiv.org/abs/1601.00711">arXiv:1601.00711</a></p>
+
+<p><span class="newWikiWord">Brendan Fong<a href="/nlab/new/Brendan+Fong">?</a></span>, <em>The Algebra of Open and Interconnected Systems</em>, <a href="https://arxiv.org/abs/1609.05382">arXiv:arXiv:1609.05382</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/John+Baez">John Baez</a> and <span class="newWikiWord">Blake Pollard<a href="/nlab/new/Blake+Pollard">?</a></span>, <em>A Compositional Framework for Reaction Networks</em>, <a href="https://arxiv.org/abs/1704.02051">arXiv:1704.02051</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/John+C.+Baez">John C. Baez</a>, <span class="newWikiWord">Brendan Fong<a href="/nlab/new/Brendan+Fong">?</a></span> and <span class="newWikiWord">Blake Pollard<a href="/nlab/new/Blake+Pollard">?</a></span>, <em>A Compositional Framework for Markov Processes</em>, <a href="https://arxiv.org/abs/1508.06448">arXiv:1508.06448</a></p>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Created on November  2, 2018 at 21:14:38.
+  Last revised on November  3, 2018 at 01:28:45.
   See the <a href="https://ncatlab.org/nlab/history/applied category theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/applied+category+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/applied+category+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/applied+category+theory/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/applied+category+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/applied+category+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/applied category theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
