--- a/pages/19886.html
+++ b/pages/19886.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9202/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9202/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -528,6 +528,12 @@ margin-left: 0em;
 <li id="Snaith74"><a class="existingWikiWord" href="/nlab/show/Victor+Snaith">Victor Snaith</a>, <em>A stable decomposition of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>Ω</mi> <mi>n</mi></msup><msup><mi>S</mi> <mi>n</mi></msup><mi>X</mi></mrow><annotation encoding="application/x-tex">\Omega^n S^n X</annotation></semantics></math></em>, Journal of the London Mathematical Society 7 (1974), 577 - 583 (<a href="https://www.maths.ed.ac.uk/~v1ranick/papers/snaiths.pdf">pdf</a>)</li>
 </ul>
 
+<p>An alternative proof is due to</p>
+
+<ul>
+<li id="Cohen80"><a class="existingWikiWord" href="/nlab/show/Ralph+Cohen">Ralph Cohen</a>, <em>Stable proof of stable splittings</em>, Math. Proc. Camb. Phil. Soc., 1980, 88, 149 (<a href="https://doi.org/10.1017/S030500410005742X">doi:10.1017/S030500410005742X</a>, <a href="https://www.cambridge.org/core/services/aop-cambridge-core/content/view/247D9F951F8AB99000E4FF6CB2DB9EA2/S030500410005742Xa.pdf/div-class-title-stable-proofs-of-stable-splittings-div.pdf">pdf</a>)</li>
+</ul>
+
 <p>Review and generalization is due to</p>
 
 <ul>
@@ -551,14 +557,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  2, 2018 at 04:31:37.
+  Last revised on November  3, 2018 at 07:46:23.
   See the <a href="https://ncatlab.org/nlab/history/stable splitting of mapping spaces" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stable+splitting+of+mapping+spaces" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+splitting+of+mapping+spaces/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/stable+splitting+of+mapping+spaces" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+splitting+of+mapping+spaces" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stable+splitting+of+mapping+spaces" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+splitting+of+mapping+spaces/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/stable+splitting+of+mapping+spaces" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+splitting+of+mapping+spaces" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/stable splitting of mapping spaces/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
